# aero_nerds_46110

./: Assignment1.ipynb  Assignment1_converted.py  airfoil.py  airfoils.py  ass_1_2.py  ass_1_3.py  plot.py  q2.py  tables.py  thin_airfoil_theory.py  xfoil_dcp_parser.py  xfoil_dcp_runner.py  xfoil_dcp_runner_full.py  xfoil_dcp_runner_full_solo.py  xfoil_runner.py  xfoils_class.py
AirfoilData/: NACA2324.txt  NACA4412.txt
Assignment2/: NACA2410_free.txt  Q1.py  Q1_theo.py  Q2.py  Q3.py  Q4.py  glauert_solver.py  main.py  xfoil.py  xfoil_reader.py
Assignment3/: Q1.py  Q2.py  Q2_iteration_testing.py  funcs.py
XFOIL/: PACC
assignment1/: README.md  airfoils.py  ass_1_1.py  ass_1_2_Cl.py  ass_1_2_old.py  ass_1_3_dCp.py  ass_1_3_old.py  ass_1_4.py  ass_1_5.py  panel_method_runner.py  test_xfoil_dcp.py  thin_airfoil_theory.py  xfoil_cl_dCp.py  xfoil_dcp_parser.py  xfoil_dcp_runner.py  xfoil_dcp_runner_full_solo.py  xfoil_runner.py  xfoils_class.py
assignment1/panel_method/: pyproject.toml
assignment1/panel_method/examples/: README.md  example_circle_cp_comparison.py  example_panel_method.py  example_utils_contours.py  example_utils_naca4_parametric.py
assignment1/panel_method/funaerotool/: cylinder_potential_flow.py  utils.py
assignment1/panel_method/funaerotool.egg-info/: requires.txt
assignment1/panel_method/funaerotool/panel_method/: induction_matrix.py  preprocessing.py  source.py  utils.py  vortex.py
assignment1/panel_method/funaerotool/tests/: test_panel_method.py
assignment2/: .gitignore  NACA2410_free.txt  Q1.py  Q2.py  Q3.py  Q4.py  airfoil_class.py  (+3 more)
(+59 files in other folders)
