[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funaerotool"
version = "0.1.0"
description = "Potential-flow solution around a cylinder (with optional circulation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["funaerotool*"]

[tool.pytest.ini_options]
testpaths = ["funaerotool/tests"]
